<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/rellayout1">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_back_arrow"
                    android:layout_centerVertical="true"
                    android:id="@+id/back_arrow"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="About Developer"
                    android:layout_toRightOf="@+id/back_arrow"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </RelativeLayout>
    <!--Toolbar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/rellayout1"
        android:id="@+id/rellayout2"
        android:background="@color/colorPrimary">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/testimage"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:id="@+id/ss"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sachin Rana"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_below="@+id/ss"
            android:layout_marginTop="15dp"
            android:id="@+id/sd"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Android Developer\nFreelancer"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_below="@+id/sd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_call"
            android:layout_toRightOf="@+id/ss"
            android:id="@+id/callme"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="20dp"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_email"
            android:layout_toLeftOf="@+id/ss"
            android:id="@+id/mailme"
            android:layout_marginTop="90dp"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/rellayout2">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/yyr"
                android:background="@drawable/shadow_bottom">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/address"
                    android:id="@+id/yt"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/yt"
                    android:layout_toLeftOf="@+id/locatebtn"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/myaddress"/>
                <Button
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:text="LOCATE"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/white"
                    android:id="@+id/locatebtn"
                    android:background="@drawable/locate_btn_background"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/yyr"
            android:id="@+id/nnt"
            android:background="@drawable/shadow_bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/current_city"
                android:id="@+id/ytt"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ytt"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/mycurrent_city"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/sds"
            android:layout_below="@+id/nnt"
            android:background="@drawable/shadow_bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/contact_no"
                android:id="@+id/byt"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/byt"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/my_contact_no"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/sds"
            android:id="@+id/ffd"
            android:background="@drawable/shadow_bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/blog"
                android:id="@+id/ymt"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ymt"
                android:layout_centerVertical="true"
                android:id="@+id/visit_blog"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/my_blog"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/ffd"
            android:background="@drawable/shadow_bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/email"
                android:id="@+id/cyt"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/cyt"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/my_email"/>
        </RelativeLayout></RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>